--- a/index.html
+++ b/index.html
@@ -1,22 +1,189 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/index.css">
+
 </head>
+
 <body>
 
-    <div class="center">
-        <div class="item">
-            <h3>Ihsanfrr</h3>
-            <lottie-player class="love" src="https://assets8.lottiefiles.com/packages/lf20_jhEt7A.json"  background="transparent"  speed="1"  style="width: 90px; height: 90px;"  loop  autoplay></lottie-player>
-            <h3>Wlzhr</h3>
+    <nav class="navbar py-4 navbar-expand-lg navbar-light bg-white custom-nav">
+        <div class="container">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Ihsan<span>frr</span></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Kelas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="">Code</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Buat Permintaan</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a href="#" class="btn btn-login" style="width: 100%">Login & Sign Up</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <div class="jumbotron">
+        <h1 class="text-center text-hero mb-3">Katalog Code</h1>
+        <p class="text-center text-subtitle mb-4">Tersedia 2 source code yang bisa kamu beli</p>
+    </div>
+
+    <div id="code" class="container">
+        <div class="row">
+            <!-- Pembayaran SPP -->
+            <div class="col-xl-4 col-lg-6 col-md-6 col-12">
+                <div class="card">
+                    <img src="./assets/thumbnails/pembayaran-spp.png" class="card-img-top" alt="thumbnail">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-lg-8 col-7">
+                                <h2>Pembayaran SPP</h2>
+                                <p>Rp 50.000</p>
+                            </div>
+                            <div class="col-lg-4 col-5">
+                                <a href="">Detail</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Pengaduan Masyarakat -->
+            <div class="col-xl-4 col-lg-6 col-md-6 col-12">
+                <div class="card">
+                    <img src="./assets/thumbnails/pengaduan-masyarakat.png" class="card-img-top" alt="thumbnail">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-lg-8 col-7">
+                                <h2>Pengaduan Masyarakat</h2>
+                                <p>Rp 50.000</p>
+                            </div>
+                            <div class="col-lg-4 col-5">
+                                <a href="">Detail</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-        
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
+    <hr>
+    <div class="container footer">
+        <div class="row mb-5">
+            <div class="col-lg-3 col-md-6">
+                <div class="group">
+                    <div class="brand">
+                        Ihsan<span>frr</span>
+                    </div>
+                    <ul>
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Kelas</a>
+                        </li>
+                        <li>
+                            <a href="#">Code</a>
+                        </li>
+                        <li>
+                            <a href="#">Buat Permintaan</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="group">
+                    <div class="parent">
+                        Bantuan
+                    </div>
+                    <ul>
+                        <li>
+                            <a href="#">Cara Belajar Online</a>
+                        </li>
+                        <li>
+                            <a href="#">Tata Cara Order</a>
+                        </li>
+                        <li>
+                            <a href="#">Kebijakan Privasi</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="group">
+                    <div class="parent">
+                        Office
+                    </div>
+                    <ul>
+                        <li>
+                            <a>ihsanfajarrpl@gmail.com</a>
+                        </li>
+                        <li>
+                            <a>Subang, Indonesia</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="group">
+                    <div class="parent">
+                        Social
+                    </div>
+                    <ul>
+                        <li>
+                            <a href="https://instagram.com/ihsanfrr">Instagram</a>
+                        </li>
+                        <li>
+                            <a href="https://t.me/ihsanfrr">Telegram</a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/channel/UCp3H-f5N7GEPkIkCvNPbvLw">YouTube</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="text-center">
+            <p>© 2021 Ihsanfrr • All rights reserved</p>
+        </div>
+    </div>
+
+    <a target="_blank"
+        href="https://api.whatsapp.com/send?phone=628990671252&text=Hai%20Ihsan,%20saya%20butuh%20bantuan%20;)">
+        <div class="circle-box">
+            <img src="./assets/icons/butuh-bantuan.svg" alt="Butuh Bantuan?">
+        </div>
+    </a>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
