--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                             <a class="nav-link" target="_blank" href="https://www.youtube.com/channel/UCp3H-f5N7GEPkIkCvNPbvLw">Youtube</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" target="_blank" href="https://github.com/ihsanfrr">Github</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                     </ul>
@@ -167,13 +170,16 @@
                     </div>
                     <ul>
                         <li>
-                            <a href="">Project</a>
+                            <a href="#project">Project</a>
                         </li>
                         <li>
-                            <a href="">YouTube</a>
+                            <a href="https://www.youtube.com/channel/UCp3H-f5N7GEPkIkCvNPbvLw" target="_blank">YouTube</a>
                         </li>
                         <li>
-                            <a href="">Contact</a>
+                            <a href="https://github.com/ihsanfrr" target="_blank">Github</a>
+                        </li>
+                        <li>
+                            <a href="#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -204,9 +210,6 @@
                         </li>
                         <li>
                             <a href="https://t.me/ihsanfrr">Telegram</a>
-                        </li>
-                        <li>
-                            <a href="https://www.youtube.com/channel/UCp3H-f5N7GEPkIkCvNPbvLw">YouTube</a>
                         </li>
                     </ul>
                 </div>
