--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-lg-12 col-7">
-                                    <h2>Todo & Pomodoro Design</h2>
+                                    <h2>Todo & Pomodoro App</h2>
                                     <p>I created this design for a fun and practice me in learning UI design for mobile applications.</p>
                                 </div>
                             </div>
